Add Photoswipe dependency

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "v1",
     "flickity": "2.3.0",
     "next": "12.3.0",
+    "photoswipe": "^5.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-flickity-component": "^3.6.3"
